--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -115,3 +115,15 @@ int __ksm_enter(struct mm_struct *mm)
 
 第13行代码,添加管理 ksm_mmlist链表的 spinlock锁
 
+第14行代码,把当前的mm数据结构添加到mm_slots_hash哈希表中。
+
+第25-28行代码,把 mm slot添加到 ksm_scan_mm slot-> mm_list链表中。
+
+第31行代码,设置mm->fags中的 MMF_VM_MERGEABLE标志位,表示这个进程已经添加到KSM系统中。
+
+第34~35行代码,如果之前 ksm_mm_head.mm_list链表为空,则唤醒ksmd内核线程。
+
+```
+[ksmd内核线程]
+```
+
