--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -125,5 +125,112 @@ int __ksm_enter(struct mm_struct *mm)
 
 ```
 [ksmd内核线程]
+static int ksm_scan_thread(void *nothing)
+{
+	set_freezable();
+	set_user_nice(current, 5);
+
+	while (!kthread_should_stop()) {
+		mutex_lock(&ksm_thread_mutex);
+		wait_while_offlining();
+		if (ksmd_should_run())
+			ksm_do_scan(ksm_thread_pages_to_scan);
+		mutex_unlock(&ksm_thread_mutex);
+
+		try_to_freeze();
+
+		if (ksmd_should_run()) {
+			schedule_timeout_interruptible(
+				msecs_to_jiffies(ksm_thread_sleep_millisecs));
+		} else {
+			wait_event_freezable(ksm_thread_wait,
+				ksmd_should_run() || kthread_should_stop());
+		}
+	}
+	return 0;
+}
 ```
 
+ksm_scan_thread是ksmd内核线程的主干,每次会执行 ksm_do_scan()函数去扫描和合并100个页面(见 ksm_thread_pages_to_scan变量),然后睡眠等待20毫秒(见 ksm_thread_sleepmillisecs变量),这两个参数可以在“/ sys/kernel/mm/ksm”目录下的相关参数中去设置和修改。
+
+```
+[ksmd内核线程]
+static void ksm_do_scan(unsigned int scan_npages)
+{
+	struct rmap_item *rmap_item;
+	struct page *uninitialized_var(page);
+
+	while (scan_npages-- && likely(!freezing(current))) {
+		cond_resched();
+		rmap_item = scan_get_next_rmap_item(&page);
+		if (!rmap_item)
+			return;
+		cmp_and_merge_page(page, rmap_item);
+		put_page(page);
+	}
+}
+```
+
+ksm_do_scan()函数在 while循环中尝试去合并 scan_npages个页面, scan_get_next_rmap_item()获取一个合适的匿名页面page, cmp_and_merge_page()会让page 在在KSM中的stable和unstable 两棵红黑树中查找是否有合适合并的对象,并且尝试去合并它们。下面首先来看KSM的核心数据结构。
+
+```
+[mm/ksm.c]
+struct rmap_item {
+	struct rmap_item *rmap_list;
+	union {
+		struct anon_vma *anon_vma;	/* when stable */
+#ifdef CONFIG_NUMA
+		int nid;		/* when node of unstable tree */
+#endif
+	};
+	struct mm_struct *mm;
+	unsigned long address;		/* + low bits used for flags below */
+	unsigned int oldchecksum;	/* when unstable */
+	union {
+		struct rb_node node;	/* when node of unstable tree */
+		struct {		/* when listed from stable tree */
+			struct stable_node *head;
+			struct hlist_node hlist;
+		};
+	};
+};
+
+struct mm_slot {
+	struct hlist_node link;
+	struct list_head mm_list;
+	struct rmap_item *rmap_list;
+	struct mm_struct *mm;
+};
+
+struct ksm_scan {
+	struct mm_slot *mm_slot;
+	unsigned long address;
+	struct rmap_item **rmap_list;
+	unsigned long seqnr;
+};
+```
+
+rmap_item 数据结构描述一个虚拟地址反向映射的条目(item)。
+
+- rmap_list:所有的rmap_item连接成一个链表,链表头在ksm_scan.rmap_list中。
+- anon_vma:当rmap_item加入stable树时，指向VMA的anon_vma数据结构。
+- mm:进程的struct mm_struct数据结构。
+- address: rmap_item所跟踪的用户空间地址，
+- oldchecksum:虚拟地址对应的物理页面的旧校验值。
+- node: rmap_item加入unstable红黑树的节点。
+- head:加入stable红黑树的节点。
+- hlist: stable链表。
+
+mmslot数据结构描述添加到KSM系统中将要被扫描的进程mm struct数据结构。
+
+- link:用于添加到mm_slot哈希表中。
+- mm_list:用于添加到mm_slot链表中，银链表头在ksm_mm_head。
+- rmap_list: rmap_item链表头。
+- mm:进程的mm数据结构。
+
+ksm_scan数据结构用于表示当前扫描的状态。
+
+- mm_slot:当前正在扫描的mm_slot。
+- address:下一次扫描地址。
+- rmap_list:将要扫描rmap_item的指针。
+- seqnr:全部扫描完成后会计数一次，用于删除 unstable节点。
