--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -408,6 +408,129 @@ next_mm:
 
 第10行代码, ksmmm_head链表为空,则不进行扫描。
 
-第 14~64 行代码，ksmd第一次跑的情况，初始化ksm_scan  数据结构中的成员ksm_scan.mm_slot、ksm_scan.address和ksm_scan.rmap_list。
+第14~64 行代码，ksmd第一次跑的情况，初始化ksm_scan  数据结构中的成员ksm_scan.mm_slot、ksm_scan.address和ksm_scan.rmap_list。
 
 第66~107行代码，扫描当前slot 对应的用户进程中的所有VMAs,寻寻找一个合适的匿名页面。
+
+第73行代码，for循环遍历所有VMA。
+
+第81~107行代码，扫描VMA中所有的虚拟页面，follow_page()函数从虚拟地址开始找回normal mapping页面的struct page数据结构，KSM只会处理匿名页面的情况
+
+第90行代码,使用PageAnon()来判断该,是否为匿名页面。
+
+第92~93行代码，，冲刷该页对应的cache。get_next_rmap_item()去找mm_slot->rmap_list链表上是否有该虚拟地址对应的rmap_item，没找到就新建一个。
+
+第97行代码, ksm_scan.rmap_list指向刚找到或者新建的rmap_item,方便后续的扫描。找到合适的匿名页面后,释放mm->mmapsem信号量,这个信号量是在扫描VMA时加的,然后返回该页struct page数据结构。
+
+第111行代码，运行到这里说明for循环里扫描该进程所有的VMA都没找到合适的匿名页面，，因为如果找到一个合适的匿名页面是会返回rmap_item的。如果被扫描的进程已经被销毁了(mm->mm_users=0)，那么设置ksm_scan.address=0，第124~141行代码会处理这个情况。
+
+第122行代码，在该进程中没找到合适的匿名页面时，那么对应的rmap_item已经没有用处为了避免占用内存空间，直接全部删掉，
+
+第122行代码，取下一个mm_slot, 这里操作了 mm_slot链表，所以用一个spinlock锁ksm_mmlist_lock来保护链表.
+
+第124~141行代码，处理该进程被销毁的情况，把mm_slot从ksm_mm_ head链表删除，释放mm_slot数据结构，清空mm->flags中的MMF_VM_MERGEABLE标志位。
+
+第148~150行代码,如果没有扫描完一轮所有的 mm_slot,那就继续扫描下一个 mm_slot
+
+第152行代码,如果扫描完一轮 mm_slot,则增加 ksm_scan.seqnr计数。
+
+下面回到ksm_do_scan()函数中的cmp_and_merge_page()函数。
+
+```
+static void cmp_and_merge_page(struct page *page, struct rmap_item *rmap_item)
+{
+	struct rmap_item *tree_rmap_item;
+	struct page *tree_page = NULL;
+	struct stable_node *stable_node;
+	struct page *kpage;
+	unsigned int checksum;
+	int err;
+
+	stable_node = page_stable_node(page);
+	if (stable_node) {
+		if (stable_node->head != &migrate_nodes &&
+		    get_kpfn_nid(stable_node->kpfn) != NUMA(stable_node->nid)) {
+			rb_erase(&stable_node->node,
+				 root_stable_tree + NUMA(stable_node->nid));
+			stable_node->head = &migrate_nodes;
+			list_add(&stable_node->list, stable_node->head);
+		}
+		if (stable_node->head != &migrate_nodes &&
+		    rmap_item->head == stable_node)
+			return;
+	}
+
+	/* We first start with searching the page inside the stable tree */
+	kpage = stable_tree_search(page);
+	if (kpage == page && rmap_item->head == stable_node) {
+		put_page(kpage);
+		return;
+	}
+
+	remove_rmap_item_from_tree(rmap_item);
+
+	if (kpage) {
+		err = try_to_merge_with_ksm_page(rmap_item, page, kpage);
+		if (!err) {
+			/*
+			 * The page was successfully merged:
+			 * add its rmap_item to the stable tree.
+			 */
+			lock_page(kpage);
+			stable_tree_append(rmap_item, page_stable_node(kpage));
+			unlock_page(kpage);
+		}
+		put_page(kpage);
+		return;
+	}
+
+	/*
+	 * If the hash value of the page has changed from the last time
+	 * we calculated it, this page is changing frequently: therefore we
+	 * don't want to insert it in the unstable tree, and we don't want
+	 * to waste our time searching for something identical to it there.
+	 */
+	checksum = calc_checksum(page);
+	if (rmap_item->oldchecksum != checksum) {
+		rmap_item->oldchecksum = checksum;
+		return;
+	}
+
+	tree_rmap_item =
+		unstable_tree_search_insert(rmap_item, page, &tree_page);
+	if (tree_rmap_item) {
+		kpage = try_to_merge_two_pages(rmap_item, page,
+						tree_rmap_item, tree_page);
+		put_page(tree_page);
+		if (kpage) {
+			/*
+			 * The pages were successfully merged: insert new
+			 * node in the stable tree and add both rmap_items.
+			 */
+			lock_page(kpage);
+			stable_node = stable_tree_insert(kpage);
+			if (stable_node) {
+				stable_tree_append(tree_rmap_item, stable_node);
+				stable_tree_append(rmap_item, stable_node);
+			}
+			unlock_page(kpage);
+
+			/*
+			 * If we fail to insert the page into the stable tree,
+			 * we will have 2 virtual addresses that are pointing
+			 * to a ksm page left outside the stable tree,
+			 * in which case we need to break_cow on both.
+			 */
+			if (!stable_node) {
+				break_cow(tree_rmap_item);
+				break_cow(rmap_item);
+			}
+		}
+	}
+}
+```
+
+cmp_and_merge_page()函数有两个参数, page表示刚才扫描mmslot时找到的一个合格的匿名页面, rmap_item表示该page对应的rmap_item数据结构。
+
+第10行代码，如果这个页面是stable_node，否则page_stable_node()返回这个page对应的stable_node，否则返回NULL。
+
