--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -534,3 +534,4 @@ cmp_and_merge_page()函数有两个参数, page表示刚才扫描mmslot时找到
 
 第10行代码，如果这个页面是stable_node，否则page_stable_node()返回这个page对应的stable_node，否则返回NULL。
 
+第25行代码，
