--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -534,4 +534,9 @@ cmp_and_merge_page()函数有两个参数, page表示刚才扫描mmslot时找到
 
 第10行代码，如果这个页面是stable_node，否则page_stable_node()返回这个page对应的stable_node，否则返回NULL。
 
-第25行代码，
+第25行代码，stable_tree_search()函数在 stable红黑树中查找页面内容和page相同的stable页。
+
+第26 行代码，如果找到的stable页kpage和的page是同一个页面，说明该页已经是KSM页面，不需要继续处理，直接返回。put_page()减少\_count引用计数，注意page在scanget_next_rmap_item()->follow_ page()时给该页增加了\_count_引用计数。
+
+第33~46行代码,如果在 stable红黑树中找到一个页面内容相同的节点,那么调用try_to_merge_with_ksm_page()来尝试合并这个页面到节点上。合并成功后, stable_tree_append()会把 rmap_Item添加到 stable_node-> hist哈希链表上。
+
