--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -540,3 +540,11 @@ cmp_and_merge_page()函数有两个参数, page表示刚才扫描mmslot时找到
 
 第33~46行代码,如果在 stable红黑树中找到一个页面内容相同的节点,那么调用try_to_merge_with_ksm_page()来尝试合并这个页面到节点上。合并成功后, stable_tree_append()会把 rmap_Item添加到 stable_node-> hist哈希链表上。
 
+第54-58行代码,若在 stable红黑树中没能找到和page内容相同的节点,则重新计算该页的校验值。如果校验值发生变化,说明该页面的内容被频繁修改,这种页面不适合添加到 unstable红黑树中。
+
+第60行代码，unstable_tree_search_insert()搜索unstable红黑树中是否有利和该页内容相同的节点。
+
+第62~77行代码,若在unstable红黑树中能找到页面内容相同的节点tree_rmap_item和页面tree-page,那么调用try_to_merge_two_pages()去尝试合并该页page和tree_page成为一个KSM页面kpage. stable_tree_insert()会把kpage添加到stable红黑树中,创建一个新的stable节点。stable_tree_append()把tree_rmap_item和rmap_item添加到stable节点的哈希链表中,并更新统计计数ksm_pages_sharing和ksm_pages_shared.
+
+第85~90行代码,如果 stable节点插入到 stable红黑树失败,那么调用 break_cow()主动触发一个缺页中断来分离这个ksm页面。
+
