--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -648,3 +648,12 @@ replace:
 stable_tree_search()函数会搜索stable红黑树并查找是否有和page页面内容一致的节点。
 
 10-15行，如果page已经是stable_page,那不需要搜索了。
+
+stable_tree_search()函数会搜索stable红黑树并查找是否有和page页面内容一致的节点。
+
+从第18行代码开始搜索stable红黑树, rb-entry()取出一个节点元素stable node, get_ksmpage()函数把对应的stable节点转换为struct page数据结构。stable节点中有一个成员kpfn存放着页帧号,通过页帧号可以求出对应的page数据结构tree_page,注意这个函数会增加该节点tree_page的_count引用计数。
+
+ 第33行代码，通过memcmp_pages()来对比page和treepage的内容是否一致。
+
+
+
