--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -706,5 +706,77 @@ try_to_merge_with_ksm_page()函数中参数page是候选页，rmap_item是候选
 
 ```
 [ksm_do_scan()->cmp_and_merge_page()->try_to_merge_with_ksm_page()->try_to_merge_one_page()]
+static int try_to_merge_one_page(struct vm_area_struct *vma,
+				 struct page *page, struct page *kpage)
+{
+	pte_t orig_pte = __pte(0);
+	int err = -EFAULT;
+
+	if (page == kpage)			/* ksm page forked */
+		return 0;
+
+	if (!(vma->vm_flags & VM_MERGEABLE))
+		goto out;
+	if (PageTransCompound(page) && page_trans_compound_anon_split(page))
+		goto out;
+	BUG_ON(PageTransCompound(page));
+	if (!PageAnon(page))
+		goto out;
+
+	/*
+	 * We need the page lock to read a stable PageSwapCache in
+	 * write_protect_page().  We use trylock_page() instead of
+	 * lock_page() because we don't want to wait here - we
+	 * prefer to continue scanning and merging different pages,
+	 * then come back to this page when it is unlocked.
+	 */
+	if (!trylock_page(page))
+		goto out;
+	/*
+	 * If this anonymous page is mapped only here, its pte may need
+	 * to be write-protected.  If it's mapped elsewhere, all of its
+	 * ptes are necessarily already write-protected.  But in either
+	 * case, we need to lock and check page_count is not raised.
+	 */
+	if (write_protect_page(vma, page, &orig_pte) == 0) {
+		if (!kpage) {
+			/*
+			 * While we hold page lock, upgrade page from
+			 * PageAnon+anon_vma to PageKsm+NULL stable_node:
+			 * stable_tree_insert() will update stable_node.
+			 */
+			set_page_stable_node(page, NULL);
+			mark_page_accessed(page);
+			err = 0;
+		} else if (pages_identical(page, kpage))
+			err = replace_page(vma, page, kpage, orig_pte);
+	}
+
+	if ((vma->vm_flags & VM_LOCKED) && kpage && !err) {
+		munlock_vma_page(page);
+		if (!PageMlocked(kpage)) {
+			unlock_page(page);
+			lock_page(kpage);
+			mlock_vma_page(kpage);
+			page = kpage;		/* for final unlock */
+		}
+	}
+
+	unlock_page(page);
+out:
+	return err;
+}
 ```
 
+​	try_to_merge_one_page()函数尝试合并page和kpage
+
+​	第8行代码, page和kpage是同一个page
+
+​	第11行代码, page对应的VMA属性是不可合并的,即没有包含VM_MERGEABLE标志位。
+​    第16行代码,剔除不是匿名页面的部分。
+​    第26行代码,这里为什么要使用trylock_page(page),而不使用lock page(page)呢?我们需要申请该页的页面锁以方便在稍后的write_protect_page()中读取稳定的PageSwapCache的状态,并且不需要在这里睡眠等待该页的页锁。如果该页被其他人加锁了,我们可以略过它,先处理其他页面。
+​    第34行代码, write_protect page)对该页映射VMA的pte进行写保护操作。
+​    第35~44行代码,在与unstable树节点合并时,参数kpage有可能传过来NULL,这主要是设置page为stable节点,并且设置该页的活动情况(mark page accessed)。
+​    第44~46行代码, pages_identical()再一次比较page和kpage内容是否一致。如果一致,则调用replace_page()),把该page对应的pte设置对应的kpage中。
+
+下面来看write_protect_page()函数的实现。
