--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -849,4 +849,32 @@ out:
 }
 ```
 
-第24 行代码，通过VMA和page数据结构可以计算出page对应的虚拟地址address。
+第14 行代码，通过VMA和page数据结构可以计算出page对应的虚拟地址address。
+
+第24行代码, 由mm和虚拟地址address通过查询页表找到该地址对应的pte页表项。
+
+第 28~55 行代码，因为该函数的作用是设置pte为写保护，因此对应pte页表项的属性是可写或者脏页面需要设置pte为写保护(对ARM处理器设置页表项的L_PTE_RDONLY比特位，对 x86处理器清_PAGE_BIT_RW 比特位)，)脏页面通过set_page_dirty()函数来调用该页的mapping>a_ops->set_page_dirty()函数并通知回写系统。第32行代码，刷新这个页面对应的cache。
+
+第42 行代码，ptep_clear_flush_notify()清空pte 页表项内容并冲刷相应的 TLB，保证没有DIRECT_IO发生，函数返回该pte原来的内容。
+
+第52-52行代码，新生成一个个具有只读属性的 PTE entry，并设置到硬件页面中。
+
+为什么第26行代码中要有这样一个判断公式呢?(page_mapcount(page)+1+ swapped != page_count(page))。
+    这是一个需要深入理解内存管理代码才能明确的问题，涉及到page的_count和_mapcount两个引用计数的巧妙运用。write_protect_ page()函数本身的目的是让页面变成只读，后续就可以做比较和合并的工作了。要把一个页面变成只读需要满足如下两个条件。
+
+-   确认没有其他人获取了该页面。
+-   将指向该页面的pte变成只读属性。
+
+第二个条件容易处理,难点在第一个条件上。一般来说, page的_count计数有如下4种来源。
+
+-   page cache在radix tree上, KSM不考虑page cache情况。
+-   被用户态的pte引用, _count和mapcount都会增加计数。
+-   page->private私用数据也会增加count计数,对于匿名页面,需要判断是否在swap cache中, 例如add_to_swap()函数。
+-   内核中某些页面操作时会增加count计数,例如follow_page(), get_user_pages_fast()等。
+
+假设没有其他内核路径操作该页面,并且该页面不在 swap cache中,两个引用计数的关系为:
+
+```
+(page->_mapcount + 1) = page->_ count
+```
+
