--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -879,3 +879,11 @@ out:
 ```
 
 但是上述公式也有例外，例如该页面发生DIRECT_IO读写的情况，调用关系如下。
+
+```
+generic_file_direct_write()
+->mapping->a_ops->direct_IO()
+->ext4_direct_IO()
+
+```
+
