--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -884,6 +884,14 @@ out:
 generic_file_direct_write()
 ->mapping->a_ops->direct_IO()
 ->ext4_direct_IO()
+->__blockdev_direct_IO()
+->do_blockdev_direct_IO()
+->do_direct_IO()
+->dio_get_page()
+->dio_refill_pages()
+->iov_iter_get_pages()
+->get_user_pages_fast()
 
 ```
 
+最后调用 get＿user＿pages＿fast()函数来分配内存，它会让page-＞＿count 引用计数加1，因此在没有DIRECT＿IO读写的情况下，上述公式变为：
