--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -957,4 +957,4 @@ out:
 }
 ```
 
-replace_page()函数的参数,其中page是旧的page, page是 stable树中找到的KSM页
+replace_page()函数的参数,其中page是旧的page, page是 stable树中找到的KSM页面, onig_pte用于判断在这期间page是否被修改了。简单来说就是使用 page的pfn加上原来page的一些属性构成一个新的pte页表项,然后写入到原来page的pte页表项中,这样原来的page页对应的VMA用户地址空间就和 page建立了映射关系。
