--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -994,3 +994,76 @@ static inline void *page_rmapping(struct page *page)
 stable_tree_append()把rmap_item添加到kpage页面的stable_node中的哈希链表里,如果有多个页面同时映射到stable_node上,则增加ksm_pages_sharing计数,否则增加ksm_pages_shared计数,说明这是一个新成立的stable节点。ksm_pages_shared计数表示系统中有多个ksm节点, ksm_pages_sharing计数表示合并到ksm节点中的页面个数。
 
 page页合并到 page页面后,退出 cmp_and_merge_page()便开始扫描下一个目标页面了。注意这里 cmp_and_merge_page()函数第27行代码中的 put_page(page)和 ksm_do_scan()函数以及第11行代码中的 put_page(page),大家需要想明白它们在何处增加了page的计数。
+
+上面是在stable树中找到和候选者页面内容相同的情况。假设在stable树中没有找到合适页面,那么接下来会去查找unstable树。
+
+```
+[ksm_do_scan()->cmp_and_merge_page()->unstable_tree_search_insert()]
+static
+struct rmap_item *unstable_tree_search_insert(struct rmap_item *rmap_item,
+					      struct page *page,
+					      struct page **tree_pagep)
+{
+	struct rb_node **new;
+	struct rb_root *root;
+	struct rb_node *parent = NULL;
+	int nid;
+
+	nid = get_kpfn_nid(page_to_pfn(page));
+	root = root_unstable_tree + nid;
+	new = &root->rb_node;
+
+	while (*new) {
+		struct rmap_item *tree_rmap_item;
+		struct page *tree_page;
+		int ret;
+
+		cond_resched();
+		tree_rmap_item = rb_entry(*new, struct rmap_item, node);
+		tree_page = get_mergeable_page(tree_rmap_item);
+		if (IS_ERR_OR_NULL(tree_page))
+			return NULL;
+
+		/*
+		 * Don't substitute a ksm page for a forked page.
+		 */
+		if (page == tree_page) {
+			put_page(tree_page);
+			return NULL;
+		}
+
+		ret = memcmp_pages(page, tree_page);
+
+		parent = *new;
+		if (ret < 0) {
+			put_page(tree_page);
+			new = &parent->rb_left;
+		} else if (ret > 0) {
+			put_page(tree_page);
+			new = &parent->rb_right;
+		} else if (!ksm_merge_across_nodes &&
+			   page_to_nid(tree_page) != nid) {
+			/*
+			 * If tree_page has been migrated to another NUMA node,
+			 * it will be flushed out and put in the right unstable
+			 * tree next time: only merge with it when across_nodes.
+			 */
+			put_page(tree_page);
+			return NULL;
+		} else {
+			*tree_pagep = tree_page;
+			return tree_rmap_item;
+		}
+	}
+
+	rmap_item->address |= UNSTABLE_FLAG;
+	rmap_item->address |= (ksm_scan.seqnr & SEQNR_MASK);
+	DO_NUMA(rmap_item->nid = nid);
+	rb_link_node(&rmap_item->node, parent, new);
+	rb_insert_color(&rmap_item->node, root);
+
+	ksm_pages_unshared++;
+	return NULL;
+}
+```
+
