--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -1067,3 +1067,38 @@ struct rmap_item *unstable_tree_search_insert(struct rmap_item *rmap_item,
 }
 ```
 
+unstable_tree_search_insert()函数与stable_tree_search()的逻辑类似。查找unstable红黑树,这棵树的根在root_unstable_tree, get_mergeable_page()判断从树中取出来的页面是否合格,只有匿名页面才可以被合并。如果在树中没找到和候选页面相同的内容,那么会把候选页面也添加到该树中,见第59~63行代码。 rmap item-> address的低12比特位用于存放些标志位,例如 UNSTABLE_FLAG(0x100)表示 rmap_Item在 unstable树中,另外低8位用于存放全盘扫描的次数 seqnr 。unstable树的节点会在一次全盘扫描后被删掉,在下次全盘扫描重新加入到 unstable树中。 ksm_pages_unshared表示有在 unstable树中的节点个数。
+
+当在 unstable树中找到和候选页面page内容相同的 tree page后,尝试把该page和tree_page合并成一个KSM页面。下面来看 try_to_merge_two_pages()函数的实现。
+
+```
+[ksm_do_scan()->cmp_and_merge_page()->try_to_merge_two_pages()]
+static struct page *try_to_merge_two_pages(struct rmap_item *rmap_item,
+					   struct page *page,
+					   struct rmap_item *tree_rmap_item,
+					   struct page *tree_page)
+{
+	int err;
+
+	err = try_to_merge_with_ksm_page(rmap_item, page, NULL);
+	if (!err) {
+		err = try_to_merge_with_ksm_page(tree_rmap_item,
+							tree_page, page);
+		/*
+		 * If that fails, we have a ksm page with only one pte
+		 * pointing to it: so break it.
+		 */
+		if (err)
+			break_cow(rmap_item);
+	}
+	return err ? NULL : page;
+}
+```
+
+ 这里调用了两次 try_to_merge_with_ksm_page(),注意这两次调用的参数不一样,实现的功能也不一样。
+
+ 第一次,参数是候选者page和对应的 rmap_item, page为NULL,因此第一次调用主要是把page的页表设置为写保护,并且把该页设置为KSM节点
+
+第二次,参数变成了 tree_page和对应的 tree_rmap_item, page为候选者page,因此这里要实现的功能是把 tree_page的页表设置为写保护,然后再比较 tree_page和page之间的内容是否一致。在查找 unstable树时已经做过页面内容的比较,为什么这里还需要再比较一次呢?因为在这个过程中,页面有可能被别的进程修改了内容。当两个页面内容确保一致后,借用page的pfn来重新生成一个页表项并设置到 tree page的页表中,也就是tree_page对应的进程虚拟地址和物理页面page重新建立了映射关系, tree_page和page合并成了一个KSM页面,page作为KSM页面的联络点。
+
+回到 cmp_and_merge_page()函数中,当候选者page荣升为KSM页面 page后, stable_tree_insert()会把KSM页 page添加到 stable树中。
