--- a/kernel/memory/17. KSM/1. KSM实现.md
+++ b/kernel/memory/17. KSM/1. KSM实现.md
@@ -1102,3 +1102,89 @@ static struct page *try_to_merge_two_pages(struct rmap_item *rmap_item,
 第二次,参数变成了 tree_page和对应的 tree_rmap_item, page为候选者page,因此这里要实现的功能是把 tree_page的页表设置为写保护,然后再比较 tree_page和page之间的内容是否一致。在查找 unstable树时已经做过页面内容的比较,为什么这里还需要再比较一次呢?因为在这个过程中,页面有可能被别的进程修改了内容。当两个页面内容确保一致后,借用page的pfn来重新生成一个页表项并设置到 tree page的页表中,也就是tree_page对应的进程虚拟地址和物理页面page重新建立了映射关系, tree_page和page合并成了一个KSM页面,page作为KSM页面的联络点。
 
 回到 cmp_and_merge_page()函数中,当候选者page荣升为KSM页面 page后, stable_tree_insert()会把KSM页 page添加到 stable树中。
+
+```
+static struct stable_node *stable_tree_insert(struct page *kpage)
+{
+	int nid;
+	unsigned long kpfn;
+	struct rb_root *root;
+	struct rb_node **new;
+	struct rb_node *parent = NULL;
+	struct stable_node *stable_node;
+
+	kpfn = page_to_pfn(kpage);
+	nid = get_kpfn_nid(kpfn);
+	root = root_stable_tree + nid;
+	new = &root->rb_node;
+
+	while (*new) {
+		struct page *tree_page;
+		int ret;
+
+		cond_resched();
+		stable_node = rb_entry(*new, struct stable_node, node);
+		tree_page = get_ksm_page(stable_node, false);
+		if (!tree_page)
+			return NULL;
+
+		ret = memcmp_pages(kpage, tree_page);
+		put_page(tree_page);
+
+		parent = *new;
+		if (ret < 0)
+			new = &parent->rb_left;
+		else if (ret > 0)
+			new = &parent->rb_right;
+		else {
+			/*
+			 * It is not a bug that stable_tree_search() didn't
+			 * find this node: because at that time our page was
+			 * not yet write-protected, so may have changed since.
+			 */
+			return NULL;
+		}
+	}
+
+	stable_node = alloc_stable_node();
+	if (!stable_node)
+		return NULL;
+
+	INIT_HLIST_HEAD(&stable_node->hlist);
+	stable_node->kpfn = kpfn;
+	set_page_stable_node(kpage, stable_node);
+	DO_NUMA(stable_node->nid = nid);
+	rb_link_node(&stable_node->node, parent, new);
+	rb_insert_color(&stable_node->node, root);
+
+	return stable_node;
+}
+```
+
+分配一个新的stable_node节点，page->mapping指向stable_node节点，然后把stable_node节点插入到stable树中。
+最后rmap_item和 tree_rmap_item会添加到新的stable_tree的哈希链表中，并且更新ksm的数据统计。
+
+至此,我们就完成了对一个页面是如何合并成KSM页面的介绍,包括查找stable树和unstable树等,接下来看如果在合并过程中发生失败的情况。
+
+```
+static void break_cow(struct rmap_item *rmap_item)
+{
+	struct mm_struct *mm = rmap_item->mm;
+	unsigned long addr = rmap_item->address;
+	struct vm_area_struct *vma;
+
+	/*
+	 * It is not an accident that whenever we want to break COW
+	 * to undo, we also need to drop a reference to the anon_vma.
+	 */
+	put_anon_vma(rmap_item->anon_vma);
+
+	down_read(&mm->mmap_sem);
+	vma = find_mergeable_vma(mm, addr);
+	if (vma)
+		break_ksm(vma, addr);
+	up_read(&mm->mmap_sem);
+}
+```
+
+首先follow_page()函数由VMA和虚拟地址获取出normal mapping的页面数据结构，参数flags是FOLL_GET| FOLL_MIGRATION, FOLL_GET表示增加该页的_count计数，FOLL MIGRATION表表示如果该页在页迁移的过程中会等待页迁移完成。对于KSM页面，这里直接调用handle_mm_fault()人为造一个写错误(FAULT_FLAG_WRITE)的缺页中断，在缺页中断处理函数中处理写时复制COW，最终调用do_wp_page()重新分配- 一个页面来和对应的虚拟地址建立映射关系。
