--- a/kernel/memory/18. Dirty COW内存漏洞/1. dirty_cow.md
+++ b/kernel/memory/18. Dirty COW内存漏洞/1. dirty_cow.md
@@ -7,3 +7,5 @@
 ![代码段2](/home/narwal/study/linux-kernel/kernel/memory/18. Dirty COW内存漏洞/picture/代码段2.png)
 
 读者可以在qemu中的 ARM Express平台上测试。在 Ubuntu上可能已经测试不出来了,因为在你看到书稿时, Ubuntu系统可能已经安装了该漏洞的补丁。
+
+![](/home/narwal/study/linux-kernel/kernel/memory/18. Dirty COW内存漏洞/picture/编译.png)
