--- a/kernel/memory/19.总结内存管理的数据结构API/总结.md
+++ b/kernel/memory/19.总结内存管理的数据结构API/总结.md
@@ -9,11 +9,8 @@
 - page和pte之间的互换。
 - zone和page之间的互换。
 - zone和pg_data之间的互换。
-
-
-
 1. ## 内存管理数据结构的关系图
-
+   
    在大部分Liux系统中，内存设备的初始化一般是在 BIOS或 bootloader中，然后把DDR的大小传递给Linux内核，因此从Linux 内核角度来看DDR，其实就是一段物理内存空间。在Linux内核中，和内存硬件物理特性相关的一些数据结构主要集中在MMU(处理器中内存管理单元)中，例如页表、cacheTLB操作等。因此大部分的Linux内核中关于内存管理的相关数据结构都是软件的概念中，例如mm、vma、zone.page.pgdata等。Linux内核中的内存管理中的数据结构错综复杂，归纳总结如图2.36所示
 
 (1) 由mm数据结构和虚拟地址vaddr找到对应的VMA
@@ -23,8 +20,32 @@
 ```
 struct vm_area_struct * find_vma(struct mm_struct *mm,unsigned long addr);
 struct vm_area_struct * find_vma_prv(struct mm_struct *mm,unsigned long addr,struct vm_area_struct **pprev);
-struct vm_area_struct * find_vma_intersection
+struct vm_area_struct * find_vma_intersection(struct mm_struct *mm,unsignedki long start_addr, unsigned long end_addr)d 
 ```
 
+由VMA得出MM数据结构，struct vm_area struct 数据结构有一个指针指向 struct mm_struct。
 
+```
+struct vm_area_struct{
+    ...
+    struct mm_struct *vm_mm;
+    ...
+}
+```
 
+（2）由page和vma找到虚拟地址vaddr。
+
+```
+[mm/rmap.c]
+//只针对匿名页面，KSM页面见第2.17.2节
+unsigned long vma address（struct page*page，struct vm_area_struct*vma）
+=>pgoff=page->index；表示在一个vma中page的index
+=>vaddr=vma->vm_start +（（pgoff-vma->vm pgoff）<< PAGE_SHIFT）；
+```
+
+（3）由page找到所有映射的VMA
+
+通过反向映射rmap系统来实现rmap walk（）对于匿名页面来说：
+=>由page->mapping找到anon_vma数据结构
+=>遍历anon_vma->rbroot红黑树，取出avc数据结构
+=>每个avc数据结构中指向每个映射的VMA
