--- a/kernel/memory/19.总结内存管理的数据结构API/总结.md
+++ b/kernel/memory/19.总结内存管理的数据结构API/总结.md
@@ -48,4 +48,21 @@ unsigned long vma address（struct page*page，struct vm_area_struct*vma）
 通过反向映射rmap系统来实现rmap walk（）对于匿名页面来说：
 =>由page->mapping找到anon_vma数据结构
 =>遍历anon_vma->rbroot红黑树，取出avc数据结构
-=>每个avc数据结构中指向每个映射的VMA
+=>每个avc数据结构中指向每个映射的VMA和虚拟地址vaddr，找出相应的page数据结构。
+
+```
+[include/1inusx/mm.h]
+struct page*follow_page(struct vm_area_struct*vma，unsigned long_vaddr，unsigned int foll_flags)
+```
+
+=>由虚拟地址vaddr通过查询页表找出pte
+=>由pte找出页帧号pfn，然后在mem_map[]找到相应的struct page结构
+
+（4）page和pfn之间的互换
+
+```
+[include/asm-generic/memory_model.h]
+由page到pfn：
+page_to_pfn()#define page_to pfn(page)((unsigned 1ong)((page)-mem map)+\
+ARCH_PFN_OFFSET)
+```
