--- a/kernel/memory/19.总结内存管理的数据结构API/总结.md
+++ b/kernel/memory/19.总结内存管理的数据结构API/总结.md
@@ -63,6 +63,49 @@ struct page*follow_page(struct vm_area_struct*vma，unsigned long_vaddr，unsign
 ```
 [include/asm-generic/memory_model.h]
 由page到pfn：
-page_to_pfn()#define page_to pfn(page)((unsigned 1ong)((page)-mem map)+\
+page_to_pfn()
+#define page_to_pfn(page)((unsigned 1ong)((page)-mem_map)+\
 ARCH_PFN_OFFSET)
+由pfn到page：
+#define __pfn_to_phys(pfn)((phys_addr_t)(pfn)<< PAGE_SHIFT)
 ```
+
+（5）pfn和paddr之间的互换
+
+```
+[arch/arm/include/asm/memory.h]
+由paddr和pfn：
+#define __phys_to_pfn(paddr)((unsigned 1ong)((paddr)>>PAGE_SHIFT))
+由pfn到paddr：
+#define pfn_to_phys(pfn)((phys_addr_t)(pfn)<< (PAGE_SHIFT)
+```
+
+（6）page和pte之间的互换
+
+```
+由page到pte：
+==》先由page到pfn
+==》在由pfn到pte
+由pte到page
+#define pte_page(pte) (pfn_to_page(pte_pfn(pte)))
+```
+
+（7） zone和 page 之间的互换
+
+```
+由zone到page:
+zone数据结构有zone->start_pfn指向zone起始的页面，然后由pfn找到page数据结构。
+由page到zone:
+page_zone()函数返回page所属的zone，通过page->flags布局实现。
+
+```
+
+（8） zone和pg_data 之间的互换
+
+```
+由pd_data到zone:
+pg_data_t->node_zones
+由zone到pg_data:
+zone->zone_pgdat
+```
+
